Fix spacing errors in week 4

--- a/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.1_monitoring_on_aws.ipynb
+++ b/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.1_monitoring_on_aws.ipynb
@@ -38,15 +38,15 @@
     "## Understand the Benefits of Monitoring\n",
     "Monitoring gives you visibility into your resources, but the question now is, \"Why is that important?\" The following are some of the benefits of monitoring.\n",
     "\n",
-    "**Respond to operational issues proactively before your end users are aware of them.** It\u2019s a bad practice to wait for end users to let you know your application is experiencing an outage. Through monitoring, you can keep tabs on metrics like error response rate or request latency, over time, that help signal that an outage is going to occur. This enables you to automatically or manually perform actions to prevent the outage from happening\u2014fixing the problem before your end users are aware of it.\n",
+    "**Respond to operational issues proactively before your end users are aware of them.** It’s a bad practice to wait for end users to let you know your application is experiencing an outage. Through monitoring, you can keep tabs on metrics like error response rate or request latency, over time, that help signal that an outage is going to occur. This enables you to automatically or manually perform actions to prevent the outage from happening (fixing the problem before your end users are aware of it).\n",
     "\n",
     "**Improve the performance and reliability of your resources.** Monitoring the different resources that comprise your application provides you with a full picture of how your solution behaves as a system. Monitoring, if done well, can illuminate bottlenecks and inefficient architectures. This enables you to drive performance and reliability improvement processes.\n",
     "\n",
     "**Recognize security threats and events.** When you monitor resources, events, and systems over time, you create what is called a baseline. A baseline defines what activity is normal. Using a baseline, you can spot anomalies like unusual traffic spikes or unusual IP addresses accessing your resources. When an anomaly occurs, an alert can be sent out or an action can be taken to investigate the event.\n",
     "\n",
-    "**Make data-driven decisions for your business.** Monitoring is not only to keep an eye on IT operational health. It also helps drive business decisions. For example, let\u2019s say you launched a new feature for your cat photo app, and want to know whether it\u2019s being used. You can collect application-level metrics and view the number of users who use the new feature. With your findings, you decide whether to invest more time into improving the new feature.\n",
+    "**Make data-driven decisions for your business.** Monitoring is not only to keep an eye on IT operational health. It also helps drive business decisions. For example, let’s say you launched a new feature for your cat photo app, and want to know whether it’s being used. You can collect application-level metrics and view the number of users who use the new feature. With your findings, you decide whether to invest more time into improving the new feature.\n",
     "\n",
-    "**Create more cost-effective solutions.** Through monitoring, you can view resources that are being underutilized and rightsize your resources to your usage. This helps you optimize cost and make sure you aren\u2019t spending more money than necessary."
+    "**Create more cost-effective solutions.** Through monitoring, you can view resources that are being underutilized and rightsize your resources to your usage. This helps you optimize cost and make sure you aren’t spending more money than necessary."
    ]
   },
   {
@@ -54,11 +54,11 @@
    "metadata": {},
    "source": [
     "## Enable Visibility\n",
-    "AWS resources create data you can monitor through metrics, logs, network traffic, events, and more. This data is coming from components that are distributed in nature, which can lead to difficulty in collecting the data you need if you don\u2019t have a centralized place to review it all. AWS has already done that for you with a service called Amazon CloudWatch.\n",
+    "AWS resources create data you can monitor through metrics, logs, network traffic, events, and more. This data is coming from components that are distributed in nature, which can lead to difficulty in collecting the data you need if you don’t have a centralized place to review it all. AWS has already done that for you with a service called Amazon CloudWatch.\n",
     "\n",
     "Amazon CloudWatch is a monitoring and observability service that collects data like those mentioned in this module. CloudWatch provides actionable insights into your applications, and enables you to respond to system-wide performance changes, optimize resource utilization, and get a unified view of operational health. This unified view is important. You can use CloudWatch to:\n",
     "- Detect anomalous behavior in your environments.\n",
-    "- Set alarms to alert you when something\u2019s not right.\n",
+    "- Set alarms to alert you when something’s not right.\n",
     "- Visualize logs and metrics with the AWS Management Console.\n",
     "- Take automated actions like scaling.\n",
     "- Troubleshoot issues.\n",
