--- a/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.3_optimizing_solutions_on_aws.ipynb
+++ b/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.3_optimizing_solutions_on_aws.ipynb
@@ -14,16 +14,15 @@
     "## What Is Availability?\n",
     "The availability of a system is typically expressed as a percentage of uptime in a given year or as a number of nines. Below, you can see a list of the percentages of availability based on the downtime per year, as well as its notation in nines.\n",
     "\n",
-    "| Database Type | Use Cases                                                                                      | AWS Service                                                    |\n",
-    "|---------------|------------------------------------------------------------------------------------------------|----------------------------------------------------------------|\n",
-    "| Relational    | Traditional applications, ERP, CRM, e-commerce                                                 | Amazon RDS, Amazon Aurora, Amazon Redshift                     |\n",
-    "| Key-value     | High-traffic web apps, e-commerce systems, gaming applications                                 | Amazon DynamoDB                                                |\n",
-    "| In-memory     | Caching, session management, gaming leaderboards, geospatial applications                      | Amazon ElastiCache for Memcached, Amazon ElastiCache for Redis |\n",
-    "| Document      | Content management, catalogs, user profiles                                                    | Amazon DocumentDB (with MongoDB compatibility)                 |\n",
-    "| Wide column   | High-scale industrial apps for equipment maintenance, fleet management, and route optimization | Amazon Keyspaces (for Apache Cassandra)                        |\n",
-    "| Graph         | Fraud detection, social networking, recommendation engines                                     | Amazon Neptune                                                 |\n",
-    "| Time series   | IoT applications, DevOps, industrial telemetry                                                 | Amazon Timestream                                              |\n",
-    "| Ledger        | Systems of record, supply chain, registrations, banking transactions                           | Amazon QLDB                                                    |\n",
+    "| Availability (%)                  | Downtime (per year) |\n",
+    "|-----------------------------------|---------------------|\n",
+    "| 90% (\"one nine\")                  | 36.53 days          |\n",
+    "| 99% (\"two nines\")                 | 3.65 days           |\n",
+    "| 99.9% (\"three nines\")             | 8.77 hours          |\n",
+    "| 99.95% (\"three and a half nines\") | 4.38 hours          |\n",
+    "| 99.99% (\"four nines\")             | 52.60 minutes       |\n",
+    "| 99.995% (\"four and a half nines\") | 26.30 minutes       |\n",
+    "| 99.999% (\"five nines\")            | 5.26 minutes        |\n",
     "\n",
     "To increase availability, you need redundancy. This typically means more infrastructure: more data centers, more servers, more databases, and more replication of data. You can imagine that adding more of this infrastructure means a higher cost. Customers want the application to always be available, but you need to draw a line where adding redundancy is no longer viable in terms of revenue."
    ]
@@ -64,7 +63,7 @@
    "metadata": {},
    "source": [
     "### Address Customer Redirection\n",
-    "The second challenge is how to let the clients, the computers sending requests to your server, know about the different servers. There are different tools that can be used here. The most common is using a Domain Name System (DNS) where the client uses one record which points to the IP address of all available servers. However, the time it takes to update that list of IP addresses and for the clients to become aware of such change, sometimes called propagation, is typically the reason why this method isn\u2019t always used.\n",
+    "The second challenge is how to let the clients, the computers sending requests to your server, know about the different servers. There are different tools that can be used here. The most common is using a Domain Name System (DNS) where the client uses one record which points to the IP address of all available servers. However, the time it takes to update that list of IP addresses and for the clients to become aware of such change, sometimes called propagation, is typically the reason why this method isn’t always used.\n",
     "\n",
     "Another option is to use a load balancer which takes care of health checks and distributing the load across each server. Being between the client and the server, the load balancer avoids propagation time issues. We discuss load balancers later."
    ]
@@ -74,10 +73,10 @@
    "metadata": {},
    "source": [
     "### Understand the Types of High Availability\n",
-    "The last challenge to address when having more than one server is the type of availability you need\u2014either be an active-passive or an active-active system.\n",
+    "The last challenge to address when having more than one server is the type of availability you need (either be an active-passive or an active-active system).\n",
     "\n",
-    "- *Active-Passive:* With an active-passive system, only one of the two instances is available at a time. One advantage of this method is that for stateful applications where data about the client\u2019s session is stored on the server, there won\u2019t be any issues as the customers are always sent to the same server where their session is stored.\n",
-    "- *Active-Active:* A disadvantage of active-passive and where an active-active system shines is scalability. By having both servers available, the second server can take some load for the application, thus allowing the entire system to take more load. However, if the application is stateful, there would be an issue if the customer\u2019s session isn\u2019t available on both servers. Stateless applications work better for active-active systems."
+    "- *Active-Passive:* With an active-passive system, only one of the two instances is available at a time. One advantage of this method is that for stateful applications where data about the client’s session is stored on the server, there won’t be any issues as the customers are always sent to the same server where their session is stored.\n",
+    "- *Active-Active:* A disadvantage of active-passive and where an active-active system shines is scalability. By having both servers available, the second server can take some load for the application, thus allowing the entire system to take more load. However, if the application is stateful, there would be an issue if the customer’s session isn’t available on both servers. Stateless applications work better for active-active systems."
    ]
   },
   {
