--- a/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.5_amazon_ec2_auto_scaling.ipynb
+++ b/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.5_amazon_ec2_auto_scaling.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Reading 4.5: Amazon EC2 Auto Scaling\n",
-    "Availability and reachability is improved by adding one more server. However, the entire system can again become unavailable if there is a capacity issue. Let\u2019s look at that load issue with both types of systems we discussed, active-passive and active-active."
+    "Availability and reachability is improved by adding one more server. However, the entire system can again become unavailable if there is a capacity issue. Let’s look at that load issue with both types of systems we discussed, active-passive and active-active."
    ]
   },
   {
@@ -13,13 +13,14 @@
    "metadata": {},
    "source": [
     "## Vertical Scaling\n",
-    "If there are too many requests sent to a single active-passive system, the active server will become unavailable and hopefully failover to the passive server. But this doesn\u2019t solve anything. With active-passive, you need vertical scaling. This means increasing the size of the server. With EC2 instances, you select either a larger type or a different instance type. This can only be done while the instance is in a stopped state. In this scenario, the following steps occur:\n",
-    "1.Stop the passive instance. This doesn\u2019t impact the application since it\u2019s not taking any traffic.\n",
-    "2.Change the instance size or type, then start the instance again.\n",
-    "3.Shift the traffic to the passive instance, turning it active.\n",
-    "4.The last step is to stop, change the size, and start the previous active instance as both instances should match.\n",
+    "If there are too many requests sent to a single active-passive system, the active server will become unavailable and hopefully failover to the passive server. But this doesn’t solve anything. With active-passive, you need vertical scaling. This means increasing the size of the server. With EC2 instances, you select either a larger type or a different instance type. This can only be done while the instance is in a stopped state. In this scenario, the following steps occur:\n",
     "\n",
-    "When the amount of requests reduces, the same operation needs to be done. Even though there aren\u2019t that many steps involved, it\u2019s actually a lot of manual work to do. Another disadvantage is that a server can only scale vertically up to a certain limit.\n",
+    "1. Stop the passive instance. This doesn’t impact the application since it’s not taking any traffic.\n",
+    "2. Change the instance size or type, then start the instance again.\n",
+    "3. Shift the traffic to the passive instance, turning it active.\n",
+    "4. The last step is to stop, change the size, and start the previous active instance as both instances should match.\n",
+    "\n",
+    "When the amount of requests reduces, the same operation needs to be done. Even though there aren’t that many steps involved, it’s actually a lot of manual work to do. Another disadvantage is that a server can only scale vertically up to a certain limit.\n",
     "\n",
     "Once that limit is reached, the only option is to create another active-passive system and split the requests and functionalities across them. This could require massive application rewriting.This is where the active-active system can help. When there are too many requests, this system can be scaled horizontally by adding more servers."
    ]
@@ -29,7 +30,7 @@
    "metadata": {},
    "source": [
     "## Horizontal Scaling\n",
-    "As mentioned above, for the application to work in an active-active system, it\u2019s already created as stateless, not storing any client session on the server. This means that having two servers or having four wouldn\u2019t require any application changes. It would only be a matter of creating more instances when required and shutting them down when the traffic decreases.\n",
+    "As mentioned above, for the application to work in an active-active system, it’s already created as stateless, not storing any client session on the server. This means that having two servers or having four wouldn’t require any application changes. It would only be a matter of creating more instances when required and shutting them down when the traffic decreases.\n",
     "\n",
     "The Amazon EC2 Auto Scaling service can take care of that task by automatically creating and removing EC2 instances based on metrics from Amazon CloudWatch.\n",
     "\n",
@@ -43,7 +44,7 @@
     "## Integrate ELB with EC2 Auto Scaling\n",
     "The ELB service integrates seamlessly with EC2 Auto Scaling. As soon as a new EC2 instance is added to or removed from the EC2 Auto Scaling group, ELB is notified. However, before it can send traffic to a new EC2 instance, it needs to validate that the application running on that EC2 instance is available.\n",
     "\n",
-    "This validation is done via the health checks feature of ELB. Monitoring is an important part of load balancers, as it should route traffic to only healthy EC2 instances. That\u2019s why ELB supports two types of health checks.\n",
+    "This validation is done via the health checks feature of ELB. Monitoring is an important part of load balancers, as it should route traffic to only healthy EC2 instances. That’s why ELB supports two types of health checks.\n",
     "\n",
     "- Establishing a connection to a backend EC2 instance using TCP, and marking the instance as available if that connection is successful.\n",
     "- Making an HTTP or HTTPS request to a webpage that you specify, and validating that an HTTP response code is returned."
@@ -54,11 +55,11 @@
    "metadata": {},
    "source": [
     "## Differentiate Between Traditional Scaling and Auto Scaling\n",
-    "With a traditional approach to scaling, you buy and provision enough servers to handle traffic at its peak. However, this means that at night time, there is more capacity than traffic. This also means you\u2019re wasting money. Turning off those servers at night or at times where the traffic is lower only saves on electricity.\n",
+    "With a traditional approach to scaling, you buy and provision enough servers to handle traffic at its peak. However, this means that at night time, there is more capacity than traffic. This also means you’re wasting money. Turning off those servers at night or at times where the traffic is lower only saves on electricity.\n",
     "\n",
-    "The cloud works differently, with a pay-as-you-go model. It\u2019s important to turn off the unused services, especially EC2 instances that you pay for On-Demand. One could manually add and remove servers at a predicted time. But with unusual spikes in traffic, this solution leads to a waste of resources with over-provisioning or with a loss of customers due to under-provisioning.\n",
+    "The cloud works differently, with a pay-as-you-go model. It’s important to turn off the unused services, especially EC2 instances that you pay for On-Demand. One could manually add and remove servers at a predicted time. But with unusual spikes in traffic, this solution leads to a waste of resources with over-provisioning or with a loss of customers due to under-provisioning.\n",
     "\n",
-    "The need here is for a tool that automatically adds and removes EC2 instances according to conditions you define\u2014that\u2019s exactly what the EC2 Auto Scaling service does."
+    "The need here is for a tool that automatically adds and removes EC2 instances according to conditions you define—that’s exactly what the EC2 Auto Scaling service does."
    ]
   },
   {
@@ -105,7 +106,7 @@
     "- Another option is to create one from an already existing template or a previous version of a launch template.\n",
     "- The last option is to create a template from scratch. The following options will need to be defined: AMI ID, instance type, key pair, security group, storage, and resource tags.\n",
     "\n",
-    "**Note**: Another way to define what Amazon EC2 Auto Scaling needs to scale is by using a **launch configuration**. It\u2019s similar to the launch template, but it doesn\u2019t allow for versioning using a previously created launch configuration as a template. Nor does it allow for creating one from an already existing EC2 instance. For these reasons and to ensure that you\u2019re getting the latest features from Amazon EC2, use a launch template instead of launch configuration."
+    "**Note**: Another way to define what Amazon EC2 Auto Scaling needs to scale is by using a **launch configuration**. It’s similar to the launch template, but it doesn’t allow for versioning using a previously created launch configuration as a template. Nor does it allow for creating one from an already existing EC2 instance. For these reasons and to ensure that you’re getting the latest features from Amazon EC2, use a launch template instead of launch configuration."
    ]
   },
   {
@@ -115,7 +116,7 @@
     "## Get to Know EC2 Auto Scaling Groups\n",
     "The next component that EC2 Auto Scaling needs is an EC2 Auto Scaling Group (ASG). An ASG enables you to define where EC2 Auto Scaling deploys your resources. This is where you specify the Amazon Virtual Private Cloud (VPC) and subnets the EC2 instance should be launched in.\n",
     "\n",
-    "EC2 Auto Scaling takes care of creating the EC2 instances across the subnets, so it\u2019s important to select at least two subnets that are across different Availability Zones.\n",
+    "EC2 Auto Scaling takes care of creating the EC2 instances across the subnets, so it’s important to select at least two subnets that are across different Availability Zones.\n",
     "\n",
     "ASGs also allow you to specify the type of purchase for the EC2 instances. You can use On-Demand only, Spot only, or a combination of the two, which allows you to take advantage of Spot instances with minimal administrative overhead.To specify how many instances EC2 Auto Scaling should launch, there are three capacity settings to configure for the group size.\n",
     "\n",
@@ -136,7 +137,7 @@
     "\n",
     "When EC2 Auto Scaling removes EC2 instances because the traffic is minimal, it keeps removing EC2 instances until it reaches a minimum capacity. Depending on your application, using a minimum of two is a good idea to ensure high availability, but you know how many EC2 instances at a bare minimum your application requires at all times. When reaching that limit, even if EC2 Auto Scaling is instructed to remove an instance, it does not, to ensure the minimum is kept.\n",
     "\n",
-    "On the other hand, when the traffic keeps growing, EC2 Auto Scaling keeps adding EC2 instances. This means the cost for your application will also keep growing. That\u2019s why it\u2019s important to set a maximum amount to make sure it doesn\u2019t go above your budget.\n",
+    "On the other hand, when the traffic keeps growing, EC2 Auto Scaling keeps adding EC2 instances. This means the cost for your application will also keep growing. That’s why it’s important to set a maximum amount to make sure it doesn’t go above your budget.\n",
     "\n",
     "The desired capacity is the amount of EC2 instances that EC2 Auto Scaling creates at the time the group is created. If that number decreases, then EC2 Auto Scaling removes the oldest instance by default. If that number increases, then EC2 Auto Scaling creates new instances using the launch template."
    ]
@@ -165,7 +166,7 @@
    "metadata": {},
    "source": [
     "## Enable Automation with Scaling Policies\n",
-    "By default, an ASG will be kept to its initial desired capacity. Although it\u2019s possible to manually change the desired capacity, you can also use scaling policies.\n",
+    "By default, an ASG will be kept to its initial desired capacity. Although it’s possible to manually change the desired capacity, you can also use scaling policies.\n",
     "\n",
     "In the AWS Monitoring module, you learned about Amazon CloudWatch metrics and alarms. You use **metrics** to keep information about different attributes of your EC2 instance like the CPU percentage. You use **alarms** to specify an action when a threshold is reached. Metrics and alarms are what scaling policies use to know when to act. For example, you set up an alarm that says when the CPU utilization is above 70% across the entire fleet of EC2 instances, trigger a scaling policy to add an EC2 instance.\n",
     "\n",
@@ -177,11 +178,11 @@
    "metadata": {},
    "source": [
     "## Simple Scaling Policy\n",
-    "A simple scaling policy allows you to do exactly what\u2019s described above. You use a CloudWatch alarm and specify what to do when it is triggered. This can be a number of EC2 instances to add or remove, or a specific number to set the desired capacity to. You can specify a percentage of the group instead of using an amount of EC2 instances, which makes the group grow or shrink more quickly.\n",
+    "A simple scaling policy allows you to do exactly what’s described above. You use a CloudWatch alarm and specify what to do when it is triggered. This can be a number of EC2 instances to add or remove, or a specific number to set the desired capacity to. You can specify a percentage of the group instead of using an amount of EC2 instances, which makes the group grow or shrink more quickly.\n",
     "\n",
-    "Once this scaling policy is triggered, it waits a cooldown period before taking any other action. This is important as it takes time for the EC2 instances to start and the CloudWatch alarm may still be triggered while the EC2 instance is booting. For example, you could decide to add an EC2 instance if the CPU utilization across all instances is above 65%. You don\u2019t want to add more instances until that new EC2 instance is accepting traffic.\n",
+    "Once this scaling policy is triggered, it waits a cooldown period before taking any other action. This is important as it takes time for the EC2 instances to start and the CloudWatch alarm may still be triggered while the EC2 instance is booting. For example, you could decide to add an EC2 instance if the CPU utilization across all instances is above 65%. You don’t want to add more instances until that new EC2 instance is accepting traffic.\n",
     "\n",
-    "However, what if the CPU utilization was now above 85% across the ASG? Only adding one instance may not be the right move here. Instead, you may want to add another step in your scaling policy. Unfortunately, a simple scaling policy can\u2019t help with that."
+    "However, what if the CPU utilization was now above 85% across the ASG? Only adding one instance may not be the right move here. Instead, you may want to add another step in your scaling policy. Unfortunately, a simple scaling policy can’t help with that."
    ]
   },
   {
@@ -189,7 +190,7 @@
    "metadata": {},
    "source": [
     "## Step Scaling Policy\n",
-    "This is where a step scaling policy helps. Step scaling policies respond to additional alarms even while a scaling activity or health check replacement is in progress. Similar to the example above, you decide to add two more instances in case the CPU utilization is at 85%, and four more instances when it\u2019s at 95%.\n",
+    "This is where a step scaling policy helps. Step scaling policies respond to additional alarms even while a scaling activity or health check replacement is in progress. Similar to the example above, you decide to add two more instances in case the CPU utilization is at 85%, and four more instances when it’s at 95%.\n",
     "\n",
     "Deciding when to add and remove instances based on CloudWatch alarms may seem like a difficult task. This is why the third type of scaling policy exists: target tracking."
    ]
