--- a/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.2_introduction_to_amazon_cloudwatch.ipynb
+++ b/c1_aws_cloud_technical_essentials/w4_monitoring_and_optimization/4.2_introduction_to_amazon_cloudwatch.ipynb
@@ -26,9 +26,9 @@
    "metadata": {},
    "source": [
     "## Break Down Metrics\n",
-    "Each metric in CloudWatch has a timestamp and is organized into containers called **namespaces**. Metrics in different namespaces are isolated from each other\u2014you can think of them as belonging to different categories.\n",
+    "Each metric in CloudWatch has a timestamp and is organized into containers called **namespaces**. Metrics in different namespaces are isolated from each other (you can think of them as belonging to different categories).\n",
     "\n",
-    "AWS services that send data to CloudWatch attach **dimensions** to each metric. A dimension is a name/value pair that is part of the metric\u2019s identity. You can use dimensions to filter the results that CloudWatch returns. For example, you can get statistics for a specific EC2 instance by specifying the InstanceId dimension when you search."
+    "AWS services that send data to CloudWatch attach **dimensions** to each metric. A dimension is a name/value pair that is part of the metric’s identity. You can use dimensions to filter the results that CloudWatch returns. For example, you can get statistics for a specific EC2 instance by specifying the InstanceId dimension when you search."
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "## Set Up Custom Metrics\n",
-    "Let\u2019s say for your application you wanted to record the number of page views your website gets. How would you record this metric to CloudWatch? It\u2019s an application-level metric, meaning that it\u2019s not something the EC2 instance would post to CloudWatch by default. This is where **custom metrics** come in. Custom metrics allows you to publish your own metrics to CloudWatch.\n",
+    "Let’s say for your application you wanted to record the number of page views your website gets. How would you record this metric to CloudWatch? It’s an application-level metric, meaning that it’s not something the EC2 instance would post to CloudWatch by default. This is where **custom metrics** come in. Custom metrics allows you to publish your own metrics to CloudWatch.\n",
     "\n",
     "If you want to gain more granular visibility, you can use **high-resolution custom metrics**, which enable you to collect custom metrics down to a 1-second resolution. This means you can send one data point per second per custom metric. Other examples of custom metrics are:\n",
     "\n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "## Understand the CloudWatch Dashboards\n",
-    "Once you\u2019ve provisioned your AWS resources and they are sending metrics to CloudWatch, you can then visualize and review that data using the CloudWatch console with dashboards. Dashboards are customizable home pages that you use for data visualization for one or more metrics through the use of widgets, such as a graph or text.\n",
+    "Once you’ve provisioned your AWS resources and they are sending metrics to CloudWatch, you can then visualize and review that data using the CloudWatch console with dashboards. Dashboards are customizable home pages that you use for data visualization for one or more metrics through the use of widgets, such as a graph or text.\n",
     "\n",
     "You can build many custom dashboards, each one focusing on a distinct view of your environment. You can even pull data from different Regions into a single dashboard in order to create a global view of your architecture.\n",
     "\n",
@@ -71,7 +71,7 @@
     "## Get to Know CloudWatch Logs\n",
     "CloudWatch can also be the centralized place for logs to be stored and analyzed, using CloudWatch Logs. CloudWatch Logs can monitor, store, and access your log files from applications running on Amazon EC2 instances, AWS Lambda functions, and other sources.\n",
     "\n",
-    "CloudWatch Logs allows you to query and filter your log data. For example, let\u2019s say you\u2019re looking into an application logic error for your application, and you know that when this error occurs it will log the stack trace. Since you know it logs the error, you query your logs in CloudWatch Logs to find the stack trace. You also set up **metric filters** on logs, which turn log data into numerical CloudWatch metrics that you graph and use on your dashboards.\n",
+    "CloudWatch Logs allows you to query and filter your log data. For example, let’s say you’re looking into an application logic error for your application, and you know that when this error occurs it will log the stack trace. Since you know it logs the error, you query your logs in CloudWatch Logs to find the stack trace. You also set up **metric filters** on logs, which turn log data into numerical CloudWatch metrics that you graph and use on your dashboards.\n",
     "\n",
     "Some services are set up to send log data to CloudWatch Logs with minimal effort, like AWS Lambda. With AWS Lambda, all you need to do is give the Lambda function the correct IAM permissions to post logs to CloudWatch Logs. Other services require more configuration. For example, if you want to send your application logs from an EC2 instance into CloudWatch Logs, you need to first install and configure the CloudWatch Logs agent on the EC2 instance.\n",
     "\n",
@@ -89,7 +89,7 @@
    "metadata": {},
    "source": [
     "## Learn the CloudWatch Logs Terminology\n",
-    "Log data sent to CloudWatch Logs can come from different sources, so it\u2019s important you understand how they\u2019re organized and the terminology used to describe your logs.\n",
+    "Log data sent to CloudWatch Logs can come from different sources, so it’s important you understand how they’re organized and the terminology used to describe your logs.\n",
     "\n",
     "**Log event:** A log event is a record of activity recorded by the application or resource being monitored, and it has a timestamp and an event message.\n",
     "\n",
@@ -107,7 +107,7 @@
     "\n",
     "You first need to decide what metric you want to set up an alarm for, then you define the threshold at which you want the alarm to trigger. Next, you define the specified time period of which the metric should cross the threshold for the alarm to be triggered.\n",
     "\n",
-    "For example, if you wanted to set up an alarm for an EC2 instance to trigger when the CPU utilization goes over a threshold of 80%, you also need to specify the time period the CPU utilization is over the threshold. You don\u2019t want to trigger an alarm based on short temporary spikes in the CPU. You only want to trigger an alarm if the CPU is elevated for a sustained amount of time, for example if it is over 80% for 5 minutes or longer, when there is a potential resource issue.\n",
+    "For example, if you wanted to set up an alarm for an EC2 instance to trigger when the CPU utilization goes over a threshold of 80%, you also need to specify the time period the CPU utilization is over the threshold. You don’t want to trigger an alarm based on short temporary spikes in the CPU. You only want to trigger an alarm if the CPU is elevated for a sustained amount of time, for example if it is over 80% for 5 minutes or longer, when there is a potential resource issue.\n",
     "\n",
     "Keeping all that in mind, to set up an alarm you need to choose the metric, the threshold, and the time period. An alarm has three possible states.\n",
     "- **OK:** The metric is within the defined threshold. Everything appears to be operating like normal.\n",
@@ -122,11 +122,11 @@
    "metadata": {},
    "source": [
     "## Use CloudWatch Alarms to Prevent and Troubleshoot Issues\n",
-    "CloudWatch Logs uses metric filters to turn the log data into metrics that you can graph or set an alarm on. For the employee directory application, let\u2019s say you set up a metric filter for 500-error response codes.\n",
+    "CloudWatch Logs uses metric filters to turn the log data into metrics that you can graph or set an alarm on. For the employee directory application, let’s say you set up a metric filter for 500-error response codes.\n",
     "\n",
-    "Then, you define an alarm for that metric that will go into the ALARM state if 500-error responses go over a certain amount for a sustained time period. Let\u2019s say if it\u2019s more than five 500-error responses per hour, the alarm should enter the ALARM state. Next, you define an action that you want to take place when the alarm is triggered.\n",
+    "Then, you define an alarm for that metric that will go into the ALARM state if 500-error responses go over a certain amount for a sustained time period. Let’s say if it’s more than five 500-error responses per hour, the alarm should enter the ALARM state. Next, you define an action that you want to take place when the alarm is triggered.\n",
     "\n",
-    "In this case, it makes sense to send an email or text alert to you so you can start troubleshooting the website, hopefully fixing it before it becomes a bigger issue. Once the alarm is set up, you feel comfortable knowing that if the error happens again, you\u2019ll be notified promptly.\n",
+    "In this case, it makes sense to send an email or text alert to you so you can start troubleshooting the website, hopefully fixing it before it becomes a bigger issue. Once the alarm is set up, you feel comfortable knowing that if the error happens again, you’ll be notified promptly.\n",
     "\n",
     "You can set up different alarms for different reasons to help you prevent or troubleshoot operational issues. In the scenario just described, the alarm triggered an SNS notification that went to a person who looked into the issue manually. Another option is to have alarms trigger actions that automatically remediate technical issues.\n",
     "\n",
